--- a/coconut.html
+++ b/coconut.html
@@ -7,7 +7,8 @@
     <title>Coconut</title>
 </head>
 <body style="text-align: center;">
-    <img src="https://tse1.mm.bing.net/th/id/OIP.VCqu_dXJEfTqNZY4ZgtYJwHaE8?rs=1&pid=ImgDetMain&o=7&rm=3.jpg" style="width: 700px; height: 700px" alt="">
+    <img src="https://tse1.mm.bing.net/th/id/OIP.VCqu_dXJEfTqNZY4ZgtYJwHaE8?rs=1&pid=ImgDetMain&o=7&rm=3/coconut.jpg" style="width: 700px; height: 700px" alt="">
 </body>
 
 </html>
+
